# mezo-terminal

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  btc_vault_cli.py  hardhat.config.js  package.json  pyproject.toml
artifacts/@openzeppelin/contracts/interfaces/draft-IERC6093.sol/: IERC20Errors.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol/: SafeERC20.dbg.json  SafeERC20.json
artifacts/@openzeppelin/contracts/utils/Address.sol/: Address.json
artifacts/@openzeppelin/contracts/utils/Errors.sol/: Errors.json
artifacts/contracts/BTCVault.sol/: BTCVault.json  IBorrowerOperations.dbg.json  IBorrowerOperations.json  IHintHelpers.json  ISortedTroves.json  ITroveManager.json
artifacts/contracts/BTCVaultFactory.sol/: BTCVaultFactory.json
artifacts/contracts/mocks/MockMUSD.sol/: MockMUSD.json
artifacts/contracts/mocks/MockMezo.sol/: MockBorrowerOperations.json  MockHintHelpers.dbg.json  MockHintHelpers.json  MockSortedTroves.json  MockTroveManager.json
cache/: solidity-files-cache.json
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/flattened/: BTCVault.sol  BTCVaultFactory.sol
contracts/script/: DeployFactory.s.sol
contracts/src/: BTCVault.sol  BTCVaultFactory.sol
contracts/src/mocks/: MockMUSD.sol  MockMezo.sol
contracts/test/: BTCVaultFactory.t.sol
tests/: conftest.py  test_factory.py  test_mezo.py  test_vault.py
